--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,9 +15,22 @@ dependencies = [
 ]
 
 [project.scripts]
-speech = "speech.__main__:main"
+transcribe = "transcribe.__main__:main"
+
 
 
 [build-system]
-requires = ["uv", "setuptools", "wheel"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[dependency-groups]
+build = ["hatch", "hatchling"]
+
+[tool.hatch.build.targets.sdist]
+include = ["src/transcribe"]
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/transcribe"]
+
+[tool.uv]
+default-groups = "all"
